gitops/manifests/worker-node/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-worker-node
  labels:
    tenant: worker-node
