gitops/manifests/worker-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-node
  namespace: app-worker-node
spec:
  selector:
    app: worker-node
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
